--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=planify
 
 # MySQL Database properties
 spring.datasource.url=jdbc:mysql://localhost:3306/planify?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=vira@123
+spring.datasource.username=TODO: Replace with actual username
+spring.datasource.password=TODO: Replace with actual password
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate- JPAProperties
