--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 # MySQL Properties
-spring.datasource.url=jdbc:mysql://localhost:3309/timetable_managementlt?createDatabaseIfNotExist=true&useUnicode=true
-spring.datasource.username=shima
+spring.datasource.url=jdbc:mysql://localhost:3306/timetable_management?createDatabaseIfNotExist=true&useUnicode=true
+spring.datasource.username=root
 #enter the correct MySQL Password below
-spring.datasource.password= Prince7181!
+spring.datasource.password= vira@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 springdoc.packagesToScan=com.timetable.controller
 springdoc.pathsToMatch=/api/**
-
-
-server.port=8085
-
+server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
